--- a/src/Presentation/ECommerceApp.Presentation/ECommerceApp.Presentation.csproj
+++ b/src/Presentation/ECommerceApp.Presentation/ECommerceApp.Presentation.csproj
@@ -21,15 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Application\ECommerceApp.Application\ECommerceApp.Application.csproj" />
     <ProjectReference Include="..\..\Infastructure\ECommerceApp.Infastructure\ECommerceApp.Infastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\" />
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Areas\Employee\Controllers\" />
     <Folder Include="Areas\Employee\Data\" />
     <Folder Include="Areas\Employee\Models\" />
@@ -38,6 +36,7 @@
     <Folder Include="Areas\Manager\Data\" />
     <Folder Include="Areas\Manager\Models\" />
     <Folder Include="Areas\Manager\Views\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
