--- a/src/Application/ECommerceApp.Application/ECommerceApp.Application.csproj
+++ b/src/Application/ECommerceApp.Application/ECommerceApp.Application.csproj
@@ -8,15 +8,17 @@
 
   <ItemGroup>
     <Folder Include="Extensions\FluentValidation\" />
-    <Folder Include="Models\DTOs\" />
-    <Folder Include="Models\VMs\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\ECommerceApp.Domain\ECommerceApp.Domain.csproj" />
+    <ProjectReference Include="..\..\Infastructure\ECommerceApp.Infastructure\ECommerceApp.Infastructure.csproj" />
   </ItemGroup>
 
 </Project>
