We couldnt make a request to post addManagerDTO because of IFormFile. We added apiAddManagerDTO without IFormFile property. We added picture wwwroot and filled imagepath as a string

--- a/src/Presentation/EcommerceApp.API/EcommerceApp.API.csproj
+++ b/src/Presentation/EcommerceApp.API/EcommerceApp.API.csproj
@@ -13,11 +13,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Application\ECommerceApp.Application\ECommerceApp.Application.csproj" />
-    <ProjectReference Include="..\ECommerceApp.Presentation\ECommerceApp.Presentation.csproj" />
+    <ProjectReference Include="..\ECommerceApp.Presentation\ECommerceApp.MVC.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\upload\" />
   </ItemGroup>
 
 </Project>
